--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ table {
     text-transform: uppercase;
     background-color: goldenrod;
     border-radius: 25px;
+    
 
 }
 
@@ -115,7 +116,7 @@ table {
 /********Мерцание кнопки*********/
 
 .exit_button {
-  padding: 16px 42px;
+  text-align: center;
   border-radius: 3px;
   box-shadow: 0px 0px 12px -2px rgba(0,0,0,0.5);
   line-height: 1.25;
@@ -128,7 +129,8 @@ table {
   position: relative;
   transition: background-color .6s ease;
   overflow: hidden;
-  width: 250px;
+  width: 60%;
+    height: 70%;
 }
 
 .exit_button:hover {
